<resources>
    <string name="app_name">sql lite app</string>
    <string name="name">Name:</string>
    <string name="last">Last:</string>
    <string name="address">Address:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="birthday">Birthday:</string>
    <string name="phone">Phone:</string>
    <string name="cell">Cell:</string>
    <string name="user">User:</string>
</resources>
