<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".data_user">

    <ImageView
        android:id="@+id/imageUser_data"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/picture_height"
        android:visibility="visible"/>

    <GridLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_top">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/labelNameTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/name"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/nameTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"

            android:id="@+id/labelLastTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/last"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="1"
            android:layout_column="1"

            android:id="@+id/lastTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"

            android:id="@+id/labelAddressTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/address"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="2"
            android:layout_column="1"

            android:id="@+id/addressTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"

            android:id="@+id/labelEmailTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/email"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="3"
            android:layout_column="1"

            android:id="@+id/emailTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_row="4"
            android:layout_column="0"

            android:id="@+id/labelUserTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/user"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="4"
            android:layout_column="1"

            android:id="@+id/userTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="5"
            android:layout_column="0"

            android:id="@+id/labelbirthdayTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/birthday"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="5"
            android:layout_column="1"

            android:id="@+id/birthdayTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="6"
            android:layout_column="0"

            android:id="@+id/labelPhoneTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/phone"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="6"
            android:layout_column="1"

            android:id="@+id/phoneTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_row="7"
            android:layout_column="0"

            android:id="@+id/labelCellTextView"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:text="@string/cell"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_row="7"
            android:layout_column="1"

            android:id="@+id/cellTextView_data"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/width_text_main_activity"
            android:layout_height="wrap_content" />


    </GridLayout>

</LinearLayout>